[project]
name = "langchain-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "langchain-core>=0.3.63",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
