[project]
name = "langchain-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.19",
    "langchain[anthropic]>=0.3.25",
    "langgraph>=0.4.8",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
]
